[package]
name = "kernel-build"
version = "0.1.0"
description = "Helper crate for building kernel drivers"
authors = ["not-matthias <26800596+not-matthias@users.noreply.github.com>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/not-matthias/kernel-build-rs"
license-file = "LICENSE"

[build-dependencies]
winreg = "0.10.1"
failure = "0.1.8"
